# lumiere

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
helm/lumiere/: Chart.yaml  values.yaml
helm/lumiere/templates/: NOTES.txt  _helpers.tpl
helm/lumiere/templates/backend/: backend-deployment.yaml  backend-service.yaml
helm/lumiere/templates/frontend/: frontend-deployment.yaml  frontend-service.yaml
helm/lumiere/templates/redis/: redis.yaml
k8s/backend/: deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
models/: recsys_model.onnx
src/lumiere/: __init__.py
src/lumiere/api/: main.py
src/lumiere/api/core/: config.py  logger.py  model.py  redis.py
src/lumiere/api/routes/: recommendation.py
src/lumiere/api/schemas/: recommendation.py
src/lumiere/api/services/: recommendation.py
src/lumiere/ml/: config.py  data_processing.py  model.py  train.py
src/lumiere/ui/: streamlit_app.py
tests/: conftest.py
tests/api/: test_health.py  test_recommendations.py
