[project]
name = "lumiere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Enes Guler", email = "hello.enesguler@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "mlflow>=1.27.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "protobuf<5.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "setuptools<70.0.0",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "pytest>=9.0.2",
]
