[project]
name = "lumiere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Enes Guler", email = "hello.enesguler@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "gdown>=5.2.1",
    "mlflow>=1.27.0",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "protobuf<5.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "setuptools<70.0.0",
    "skl2onnx>=1.20.0",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "pytest>=9.0.2",
]
